--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	<body>
 		<script src = 'script.js'></script>
 		<p id = "result"></p>
-		<button onclick="CallaFunction()">click me!</button> 
+		<button onclick="conditionalFunc()">Verify a Message</button> 
 	</body>
 </html>
